# picture-diff

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: fastapi-rest-api.mdc  frontend-client-update.mdc
app/: __init__.py  main.py
app/routers/: __init__.py  adb.py  image_diff.py  scrcpy.py
app/schemas/: __init__.py  adb.py  image_diff.py  scrcpy.py
app/services/: __init__.py  adb_service.py  image_diff.py  scrcpy_service.py
frontend/: .cta.json  openapi-ts.config.ts  package-lock.json  package.json
frontend/.cursor/rules/: shadcn-instructions.mdc
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: Header.tsx
frontend/src/hooks/: useAdb.ts
frontend/src/routes/: __root.tsx  index.tsx  screen.tsx
